# GeneralsZH-Android

./: .gitignore  AGENTS.md  README.md  android.md
.github/workflows/: build-android.yml
Core/GameEngine/Include/GameLogic/: Damage.h
Core/GameEngine/Source/Common/INI/: INI.cpp
Core/GameEngine/Source/Common/System/: ArchiveFile.cpp  ArchiveFileSystem.cpp  GameMemory.cpp  GameMemoryNull.cpp
Core/GameEngine/Source/GameLogic/System/: Damage.cpp
Core/GameEngineDevice/: CMakeLists.txt
Core/GameEngineDevice/Include/VideoDevice/FFmpeg/: FFmpegAndroidStub.h
Core/GameEngineDevice/Source/OpenALAudioDevice/: OpenALAudioCache.cpp  OpenALAudioManager.cpp
Core/GameEngineDevice/Source/StdDevice/Common/: StdBIGFileSystem.cpp
Core/GameEngineDevice/Source/VideoDevice/FFmpeg/: FFmpegFileStub.cpp
Core/Libraries/Source/WWVegas/WW3D2/: CMakeLists.txt  dx8wrapper.cpp  render2dsentence.cpp  render2dsentence.h
Core/Libraries/Source/WWVegas/WWDownload/: FTP.cpp
Generals/Code/GameEngine/Include/Precompiled/: PreRTS.h
GeneralsMD/Code/CompatLib/: CMakeLists.txt
GeneralsMD/Code/CompatLib/Source/: d3dx8_compat.cpp  thread_compat.cpp
GeneralsMD/Code/GameEngine/Include/Common/: Registry.h
GeneralsMD/Code/GameEngine/Include/Precompiled/: PreRTS.h
GeneralsMD/Code/GameEngine/Source/Common/: GameEngine.cpp  GameMain.cpp  GlobalData.cpp
GeneralsMD/Code/GameEngine/Source/Common/System/: registry.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/Object/: Locomotor.cpp
GeneralsMD/Code/GameEngineDevice/Source/: SDL3GameEngine.cpp
GeneralsMD/Code/Main/: CMakeLists.txt  SDL3Main.cpp
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/me/generalsx/zh/: GameActivity.java
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/config/: dxvk.conf
android/gradle/wrapper/: gradle-wrapper.properties
cmake/: config-memory.cmake  dx8.cmake  openal.cmake
docs/DEV_BLOG/: 2026-07-DIARY.md
docs/WORKDIR/phases/: PHASE06_ANDROID_PORT.md
